tests/mm0_mmu/fail/bad-sort43.mm0
-- free should be after provable
free provable sort s43;